[package]
name = "libservogtk"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # .so/.dll/.dylib
name = "libservogtk"
path = "servo/servo-webview.rs"

[dependencies]
servo = "0.3.0"
# Versions pinned to whatever `servo` resolves to, so the euclid/dpi/url types
# unify with Servo's own (a mismatched copy would be a distinct, incompatible type).
euclid = "0.22"
dpi = "0.1"
url = "2.5"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# jemalloc must NOT use the initial-exec TLS model, or the baked engine overflows
# the static TLS block when the .so is dlopen'd after startup (e.g. .NET P/Invoke /
# NativeLibrary.Load). `disable_initial_exec_tls` feature-unifies onto the single
# jemalloc build used by servo-allocator. Pairs with `-Ztls-model=global-dynamic`
# in .cargo/config.toml (which covers the Rust-side thread_local!s).
[dependencies.tikv-jemalloc-sys]
version = "0.6.1"
features = ["disable_initial_exec_tls"]

[build-dependencies]
glib-build-tools = "0.22"
prost-build = "0.13"
