[package]
name = "libservoshell"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # .so/.dll/.dylib
name = "libservoshell"
path = "servo/servo-webview.rs"

[dependencies]
servo = { version = "0.3.0", default-features = true, features = ["gstreamer", "media-gstreamer", "servo-media-gstreamer"] }
# Versions pinned to whatever `servo` resolves to, so the euclid/dpi/url types
# unify with Servo's own (a mismatched copy would be a distinct, incompatible type).
euclid = "0.22"
dpi = "0.1"
url = "2.5"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
# Used to render the serde-serializable `JSValue` returned by evaluate_javascript
# into a plain JSON string for the C callback. Pinned to whatever `servo` resolves.
serde_json = "1.0"

# jemalloc must NOT use the initial-exec TLS model, or the baked engine overflows
# the static TLS block when the .so is dlopen'd after startup (e.g. .NET P/Invoke /
# NativeLibrary.Load). `disable_initial_exec_tls` feature-unifies onto the single
# jemalloc build used by servo-allocator. Pairs with `-Ztls-model=global-dynamic`
# in .cargo/config.toml (which covers the Rust-side thread_local!s).
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemalloc-sys = { version = "0.6.1", features = ["disable_initial_exec_tls"] }

# On Windows, native WGL/OpenGL is unreliable, so drive Servo through ANGLE
# (OpenGL ES over Direct3D 11 / EGL). We flip ONLY surfman's default connection to
# ANGLE via `sm-angle-default`; feature unification makes every surfman user in
# the graph (paint_api, webgl, …) default to the EGL/ANGLE backend.
#
# We deliberately do NOT enable Servo's `no-wgl` feature: besides the surfman
# switch, it turns on `mozangle/build_dlls`, which compiles ANGLE from source by
# shelling out to clang-cl — and that build breaks under cargo-xwin cross
# compilation ("cannot specify '/Fo…out\' when compiling multiple source files").
# `sm-angle-default` alone does NOT pull surfman's optional mozangle dep (only
# `sm-angle-builtin` does), so mozangle stays translator-only and builds cleanly.
#
# Consequence: surfman loads `libEGL.dll` / `libGLESv2.dll` at runtime via
# LoadLibrary. Ship prebuilt ANGLE DLLs next to libservoshell.dll.
[target.'cfg(windows)'.dependencies]
surfman = { version = "0.12.3", features = ["sm-angle-default"] }
# windows-sys = { version = "0.60.2", features = ["Win32_Graphics_OpenGL"] }

[build-dependencies]
glib-build-tools = "0.22"
prost-build = "0.13"
